fix : dark mode and some blade files

--- a/resources/css/button.css
+++ b/resources/css/button.css
@@ -72,18 +72,18 @@
     }
 
     .btn-text-primary {
-        @apply text-primary-600 hover:text-primary-500 hover:underline underline-offset-4
+        @apply text-primary-600 hover:text-primary-500 hover:underline underline-offset-4 dark:text-primary-400
     }
     .btn-text-success {
-        @apply text-success-600 hover:text-success-500 hover:underline underline-offset-4
+        @apply text-success-600 hover:text-success-500 hover:underline underline-offset-4 dark:text-success-400
     }
     .btn-text-danger {
-        @apply text-error-600 hover:text-error-500 hover:underline underline-offset-4
+        @apply text-error-600 hover:text-error-500 hover:underline underline-offset-4 dark:text-error-600
     }
     .btn-text-warning {
-        @apply hover:text-warning-700 text-warning-500 hover:underline underline-offset-4
+        @apply hover:text-warning-700 text-warning-500 hover:underline underline-offset-4 dark:text-warning-400
     }
     .btn-text-info {
-        @apply hover:text-info-500 text-info-600 hover:underline underline-offset-4
+        @apply hover:text-info-500 text-info-600 hover:underline underline-offset-4 dark:text-info-400
     }
 }
